fixed styling of sign up and login pages on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -213,37 +213,37 @@ nav li {
 /* Login/ Signup---------------------------------------- */
 
 .login {
-  width: 50%;
-  max-width: 500px;
-  min-width: 400px;
-  padding: 50px;
-  background-color: rgba(15, 32, 39, 0.6);
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  color: white;
-  margin-top: 6%;
-}
-
-.sign-up {
   width: 40%;
-  max-width: 600px;
-  height: 70vh;
+  max-width: 50%;
+  min-width: 400px;
   padding: 20px;
   background-color: rgba(15, 32, 39, 0.6);
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
   color: white;
-  margin-top: 4%;
-  margin-bottom: 100px;
+  margin-top: 10px;
+}
+
+.sign-up {
+ 
+  max-width: 50%;
+  padding: 20px;
+  height: auto;
+  background-color: rgba(15, 32, 39, 0.6);
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  color: white;
+  margin: 10px 0 0 0;
+ 
 }
 
 .authentication-img {
   background-image: url("https://images.unsplash.com/photo-1630395822701-565a7c69d344?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-size:cover;
   background-position: center;
-  height: 100vh;
+  height: 120vh;
   margin: 0;
   display: flex;
   align-items: flex-start;
@@ -275,15 +275,6 @@ nav li {
 
 /* Styles for medium screens */
 @media (max-width: 1143px) {
-  .sign-up {
-    width: 60%;
-  }
-  .authentication-img {
-    background-size: auto;
-  }
-  .login {
-    margin-top: 10%;
-  }
 
   .about-text {
     font-size: 16px;
@@ -326,17 +317,22 @@ nav li {
     height: 400px;
   }
 
+  .sign-up {
+    max-width: 70%;
+  }
+
+
+
 }
 
 /* Styles for smaller screens */
 @media (max-width: 576px) {
   .sign-up {
-    width: 90%;
-    height: 70%;
-  }
+    max-width: 90%;
+  } 
 
   .login {
-    margin-top: 20%;
+    min-width: 90%;
   }
 
   .about-text {
